--- a/com.mobi.web/src/main/resources/public/modules/ontology-editor/directives/recordAccessOverlay/recordAccessOverlay.scss
+++ b/com.mobi.web/src/main/resources/public/modules/ontology-editor/directives/recordAccessOverlay/recordAccessOverlay.scss
@@ -4,7 +4,6 @@
 .record-access-overlay {
     z-index: 50 !important;
     .main {
-        height: 400px;
-        overflow-y: auto;
+        height: 360px;
     }
 }
